# PROJETOPA

./: README.md
ClienteSupervisor/ClienteSupervisor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Clienteprodutor/Clienteprodutor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
